line spacing fix

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -442,17 +442,17 @@ footer p a:hover {
     font-family: monospace;
     padding-bottom: 20vh;
     margin-bottom: -20vh;
-    margin-left: 5em;
-    margin-right: 8em;
+    margin-left: 7em;
+    margin-right: 7em;
+    padding-top: 9em;
+    z-index: 1;
     display: flex;
     text-align: center;
     flex-flow: row wrap;
     align-items: stretch;
     justify-content: space-between;
     position: relative;
-    padding-top: 9em;
     background-color: rgba(17, 8, 2, 0.7);
-    z-index: 1;
 }
 
 #missions .card-deck .card {
@@ -563,3 +563,45 @@ background-image: url("/assets/images/background-wood-board-parquet.webp")
     list-style: none;
     list-style-image: url("/assets/images/feuille.png");
 }
+
+/*===================> Page Contact <====================*/
+
+#contact {
+    font-family: monospace;
+    padding-bottom: 25vh;
+    margin-bottom: -20vh;
+    margin-left: 7em;
+    margin-right: 7em;
+    padding-top: 10em;
+    z-index: 1;
+    display: flex;
+    text-align: center;
+    flex-flow: row wrap;
+    align-items: stretch;
+    justify-content: space-between;
+    position: relative;
+    background-color: rgba(17, 8, 2, 0.7);
+}
+
+#contact h1 {
+    font-variant: small-caps;
+    color: white;
+    font-size: 4em;
+    margin-bottom: 1em;
+}
+
+#contact .contactUs {
+    margin-left: 7em;
+    margin-right: 7em;
+}
+
+#contact .form-row {
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+
+#contact .text-muted {
+    color: darkgoldenrod;
+}
+
+/*===================> Page Contact <====================*/
